# liteparse-java

./: .gitignore  README.md  RELEASING.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/actions/imagemagick-arm64/: action.yml
.github/workflows/: ci.yml  conversion-tests.yml  release-java.yml  win-arm64.yml
lib/: build.gradle.kts
lib/src/main/java/io/liteparse/: LiteParse.java  LiteParseConfig.java  LiteParseException.java  NativeBindings.java  NativeLoader.java  OutputFormat.java  ParseResult.java  ParsedPage.java  ScreenshotResult.java  TextItem.java
lib/src/main/java/io/liteparse/cli/: Main.java
lib/src/test/java/io/liteparse/: ConversionTest.java  LiteParseTest.java
lib/src/test/java/io/liteparse/cli/: MainTest.java
rust/: Cargo.toml  build.rs
rust/src/: lib.rs
scripts/: download-tessdata.sh  stage-natives.ps1  stage-natives.sh
